# uml-renderer

./: README.md  app.py  build.sh  example.py  pyproject.toml  requirements.txt  setup.py
uml/: __init__.py  engine.py
web/: __init__.py  app.py  routes.py
web/static/: script.js  styles.css
web/temp/: temp_diagram.txt
web/templates/: index.html
